#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_psana
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-06-10
2014-09-18 David Schneider
- regenerate for new pdsdata 8.1.3/psddldata with:
  TimeTool::ConfigV1, TimeTool::DataV1, L3T::DataV2, GenericPgp::ConfigV1
	
Tag: V00-06-09
2014-07-03 David Schneider
- regenerate for new pdsdata/psddldata with BldEBeamV6

Tag: V00-06-08
2014-06-14 David
- regenerate whole thing from psddldata V01-00-10
- trac ticket #309
	
Tag: V00-06-07
2014-05-08 David
- regenerate whole thing from psddldata V01-00-09
- trac ticket #300

Tag: V00-06-06
2014-05-02 David
- regenerate whole thing from psddldata V01-00-08
- trac ticket #295

Tag: V00-06-05
2014-03-10 David
- regenerate whole thing from psddldata V01-00-06
- trac ticket #278

Tag: V00-06-04
2014-03-10 David
- regenerate whole thing from psddldata V01-00-05
- trac ticket #277

Tag: V00-06-03
2014-03-04 Andy
- regenerate whole thing from psddldata V01-00-04
- trac ticket #276

Tag: V00-06-02
2014-02-12 David Schneider
- regenerate whole thing from psddldata V01-00-03 with psddl V00-13-06

Tag: V00-06-01
2014-01-07 Andy Salnikov
- regenerate whole thing from psddldata V01-00-01 with psddl V00-13-02

Tag: V00-06-00
2013-12-22 Andy Salnikov
- regenerate whole thing from psddldata V01-00-00 with psddl V00-13-00

Tag: V00-05-08
2013-12-19 Andy Salnikov
- regenerate whole thing from psddldata V00-04-56
- new epix package

Tag: V00-05-07
2013-12-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-54

Tag: V00-05-06
2013-12-12 Andy Salnikov
- regenerate whole thing from psddldata V00-04-53
- new type Evr::SrcConfigV1

Tag: V00-05-05
2013-11-12 Andy Salnikov