@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-06-11
+2014-10-03 David Schneider
+- regenerate for new pdsdata 8.1.4/psddldata with:
+  Evr::IOConfigV2
+
 Tag: V00-06-10
 2014-09-18 David Schneider
 - regenerate for new pdsdata 8.1.3/psddldata with:
